project2/test/test_2_r07.out
Error type 7 at line 10: unmatching operands
