project2/test/test_2_r07.out2
Error type 7 at Line 10: unsupported type of operands for arithmatic operator
Error type 5 at Line 10: unmatching type on both sides of assignment
